# basics_cpp

./: CMakeLists.txt  cmd.txt  stdmove.txt
3dMath/: matrix3d.h  matrix4d.h  point3d.h  quaternion.h  transform4d.h  vector3d.h
LearnCpp/ch1/: IostreamVar.cpp  Uninitialize.cpp  compilerTest.cpp  facilities.cpp  facilities.h  input.cpp  main.cpp
LearnCpp/helpfulStringFunc/: HelpfulStringFunctions.cpp  HelpfulStringFunctions.h
algo_practice/: CMakeLists.txt  binary_search.cpp  change.h  insertion_sort.cpp  iterators.cpp  linear_search.cpp  list.h  print.h  removeEveryOtherItem.h  scopedTimer.h  vector.h
algo_practice/binaryTree/: BST.h  BSTMethods.cpp  BinarySearchTree.h  TestBinary.cpp  binarysearchtree.cpp  chatGptAVLtree.cpp
arraystack/: CMakeLists.txt  Makefile  arraystack.h  main.cpp
chernoTutorials/: CMakeLists.txt  any.cpp  data.txt  howToWriteClass.cpp  move.cpp  move_semantic.cpp  mutable.cpp  mutable_main.cpp  optional.cpp  random_singleton.cpp  rval_lval.cpp  singleton.cpp  static_inClass.cpp  static_main.cpp  static_vars.cpp  structure_binding.cpp  variant.cpp
classes/: abstaction_encapsutalion.cpp  abstract_class.cpp  cast.cpp  class1.cpp  class1v2.cpp  class2_priv.cpp  class3_prot.cpp  class4_constr.cpp  class5_parConstr.cpp  class6_dest.cpp  class7_copy_constr.cpp  friend_class.cpp  inline.cpp  interface.cpp  pointer_class.cpp  practice.cpp  static_member.cpp  test.cpp  this.cpp
copycontructor/: Ex1.cpp  Exp2.cpp
creditcard/: CMakeLists.txt  CreditCard.cpp  CreditCard.h  Makefile  PredatoryCreditCard.cpp  PredatoryCreditCard.h  testCard.cpp
dynamic_mem/: array.cpp  dynamic_mem_array.cpp  new_delete.cpp  unq_ptr.cpp
error/: exceptions.cpp
files/: CMakeLists.txt  HTML.txt  file.cpp  file2.cpp  moreFiles.cpp
fnvoidptr/: voidptr.cpp
gtest/: a.out  b.out  gtest.cpp  triangle.cpp  triangle.h  triangle_test.cpp
gtest/exp2/: CMakeLists.txt  CMakeLists_bad.txt  tests.cpp  whattotest.h
gtest/g_benchmark/: CMakeLists.txt  my_bench1.cxx  my_bench1.out
gtest/mybenchmark/: mybenchmark.cpp  mybenchmark.out
gtest/new_exp1/: CMakeLists.txt  hello_test.cxx
handleoperator/: mcppv2_handle.cpp  mcppv2_handle_2.cpp
helloworlds/: hello.cpp
inheritance/: inheritance1.cpp  inheritance2.cpp  polymorphism.cpp
lambdas/: Ex1.cpp
list/: HTML.txt  Makefile  anotherlinkedlist.h  dllist_str.cpp  exception.h  linkedlist.h  linkedstackMatchtags.cpp  mainAnotherlist.cpp  mainSll.cpp  sllist_str.cpp  smart_ptrlist.cpp
luaCpp/: CMakeLists.txt  Makefile
luaCpp/libs/lua/: LICENCE  luaconf.h
luaCpp/libs/sol/: LICENCE
luaCpp/src/: main.cpp  script.lua
memoryLeak/: CMakeLists.txt  main.cpp
namespace/: def_namespace.cpp  namespace1.cpp  namespace_nested.cpp
other/: Makefile  friend.cpp  person.cpp  prime.cpp  prime.py  random.cpp  ref_ptr.cpp  safe_blackJack.cpp  sort.cpp
overloading/: in_out_op_overload.cpp  member_access_op.cpp  overload_assign_op.cpp  overload_fun.cpp  overload_op.cpp  overload_relation.cpp  overload_unary1.cpp  overload_unary2.cpp  polymorphism.cpp
projectsPractice/CreditCardValidator/: creditcarval.cpp
projectsPractice/MouseKeyMovement/: Main.cpp
projectsPractice/RestaurantEX/: LoginForm.h  MainForm.h  Program.cpp  RegisterForm.h  User.h
projectsPractice/Sudoku/: sudoku.cpp
projectsPractice/bookmanag/: bookmng.cpp
projectsPractice/reversearray/: c1.c  c2.c  c3.c  c4.c  c5.c  c6.c  c7.c  cpp1.cpp  cpp10.cpp  cpp11.cpp  cpp12.cpp  cpp2.cpp  cpp3.cpp  cpp4.cpp  cpp5.cpp  cpp6.cpp  cpp7.cpp  cpp8.cpp  cpp9.cpp
projectsPractice/scriptfilit/: main.cpp
projectsPractice/snake_game/: main.cpp
projectsPractice/someSources/: Hello_World.cpp  Source.cpp  Tutorial.cpp  add.cpp  add.h  calcu.h  ch.h  ch01.cpp  main.cpp  myatoi.cpp  myatoi_2.cpp  printTime.h  time.cpp  variable.cpp
projectsPractice/studentreport/: studentreport.cpp
ranged_for/: ranged_for.cpp
recursion/: CMakeLists.txt  Makefile  fibonacci.cpp  linearFibonacci.cpp
src/: Employe.cpp  Employe.h  Personne.cpp  Personne.h  assert.c  chrono.cpp  cstrings.c  factorial.c  fflush.c  main.cpp  numeric_limit.cpp  strings.cpp
templates/: class_template.cpp  func_template.cpp
